syntax = "proto3";

package wres.statistics.generated;

option java_package = "wres.statistics.generated";
option java_outer_classname = "MetricNameProto";
option java_multiple_files = true;

enum MetricName
{
    /*An enumeration of metric names.*/
      
    UNDEFINED = 0;
    BIAS_FRACTION = 1;
    BOX_PLOT_OF_ERRORS = 2;
    BOX_PLOT_OF_PERCENTAGE_ERRORS = 3;
    BOX_PLOT_OF_ERRORS_BY_OBSERVED_VALUE = 4;
    BOX_PLOT_OF_ERRORS_BY_FORECAST_VALUE = 5;
    BRIER_SCORE = 6;
    BRIER_SKILL_SCORE = 7;
    COEFFICIENT_OF_DETERMINATION = 8;
    CONTINGENCY_TABLE = 9;
    PEARSON_CORRELATION_COEFFICIENT = 10;
    CONTINUOUS_RANKED_PROBABILITY_SCORE = 11;
    CONTINUOUS_RANKED_PROBABILITY_SKILL_SCORE = 12;
    THREAT_SCORE = 13;
    EQUITABLE_THREAT_SCORE = 14;
    FREQUENCY_BIAS = 15;
    INDEX_OF_AGREEMENT = 16;
    KLING_GUPTA_EFFICIENCY = 17;
    MEAN_ABSOLUTE_ERROR = 18;
    MEAN_ERROR = 19;
    MEAN_SQUARE_ERROR = 20;
    MEAN_SQUARE_ERROR_SKILL_SCORE = 21;
    MEAN_SQUARE_ERROR_SKILL_SCORE_NORMALIZED = 22;
    MEDIAN_ERROR = 23;
    PEIRCE_SKILL_SCORE = 24;
    PROBABILITY_OF_DETECTION = 25;
    PROBABILITY_OF_FALSE_DETECTION = 26;
    QUANTILE_QUANTILE_DIAGRAM = 27;
    RANK_HISTOGRAM = 28;
    RELATIVE_OPERATING_CHARACTERISTIC_DIAGRAM = 29;
    RELATIVE_OPERATING_CHARACTERISTIC_SCORE = 30;
    RELIABILITY_DIAGRAM = 31;
    ROOT_MEAN_SQUARE_ERROR = 32;
    ROOT_MEAN_SQUARE_ERROR_NORMALIZED = 33;
    SAMPLE_SIZE = 34;
    SUM_OF_SQUARE_ERROR = 35;
    VOLUMETRIC_EFFICIENCY = 36;
    TIME_TO_PEAK_ERROR = 37;
    TIME_TO_PEAK_RELATIVE_ERROR = 38;
    TIME_TO_PEAK_ERROR_STATISTIC = 39;
    TIME_TO_PEAK_RELATIVE_ERROR_STATISTIC = 40;
    MEAN = 41;
    STANDARD_DEVIATION = 42;
    MINIMUM = 43;
    MAXIMUM = 44;
    ENSEMBLE_QUANTILE_QUANTILE_DIAGRAM = 45;
    FALSE_ALARM_RATIO = 46;
    MEAN_ABSOLUTE_ERROR_SKILL_SCORE = 47;
    HISTOGRAM = 48;
    BOX_PLOT = 49;
    MEDIAN = 50;
    MEAN_ABSOLUTE = 51;
    MAIN = 52;  // Main component of a score.
    RELIABILITY = 53; // Type-I bias.
    RESOLUTION = 54;
    UNCERTAINTY = 55;
    TYPE_II_BIAS = 56;
    DISCRIMINATION = 57;
    SHARPNESS = 58;
    POTENTIAL = 59; 
    TRUE_POSITIVES = 60;
    FALSE_POSITIVES = 61;
    FALSE_NEGATIVES = 62;
    TRUE_NEGATIVES = 63;
    LEFT = 64;  // Left-oriented score.
    RIGHT = 65;  // Right-oriented score.
    BASELINE = 66;  // Baseline-oriented score.
    RANK_ORDER = 67;
    FORECAST_PROBABILITY = 68;
    OBSERVED_RELATIVE_FREQUENCY = 69;
    OBSERVED_QUANTILES = 70;
    PREDICTED_QUANTILES = 71;
    COUNT = 72;
    BIN_UPPER_BOUND = 73;
}